# KohakuRiver

./: .gitignore  README.md  README.zh.md  pyproject.toml
docs/: README.md
docs/1. getting-started/: 1. overview.md  3. quick-start.md  4. concepts.md
docs/2. admin-guides/: 4. systemd-integration.md  6. qemu-setup.md
docs/3. user-guides/: 1. container-workflow.md
docs/3. user-guides/2. command-tasks/: 1. submission.md
docs/3. user-guides/3. vps-tasks/: 1. management.md  2. ssh-access.md
docs/3. user-guides/4. gpu-allocation/: 1. allocation.md
docs/3. user-guides/5. web-dashboard/: 1. overview.md
docs/4. reference/: 2. cli-reference.md
docs/7. tech-report/: README.md
docs/7. tech-report/1. architecture/: README.md  overview.md
docs/7. tech-report/2. task-system/: README.md  overview.md
docs/7. tech-report/3. container-system/: README.md  overview.md
docs/7. tech-report/4. vps-system/: README.md  overview.md
docs/7. tech-report/5. qemu-virtualization/: README.md  cloud-init.md  overview.md  vfio-passthrough.md
docs/7. tech-report/6. networking/: README.md  concept.md  overlay-setup.md  overview.md  vm-networking.md
docs/7. tech-report/7. tunnel-system/: README.md  overview.md
docs/7. tech-report/8. authentication/: README.md  overview.md
docs/networking/: README.md  configuration.md  troubleshooting.md
scripts/: cleanup-overlay-host.sh  cleanup-overlay-runner.sh  code_complexity.py  create-vm-base-image.sh  recover-vfio.sh  test-vfio-bind.sh  test_tunnel_client.py
src/kohakuriver-doc/: .gitignore  .prettierrc  index.html  package-lock.json  package.json  site.config.js  uno.config.js  vite.config.js
src/kohakuriver-doc/docs/: _order.json
src/kohakuriver-doc/public/: search-index.json
src/kohakuriver-doc/scripts/: prebuild.cjs
src/kohakuriver-doc/src/: App.vue  main.js
src/kohakuriver-manager/: package-lock.json  package.json  uno.config.js  vite.config.js
src/kohakuriver-manager/src/: App.vue  auto-imports.d.ts  components.d.ts  main.js  typed-router.d.ts
src/kohakuriver-tunnel/: Cargo.toml  README.md
src/kohakuriver-tunnel/src/: connection.rs  main.rs  protocol.rs  tunnel.rs
src/kohakuriver/cli/: client.py  main.py
src/kohakuriver/db/: auth.py  base.py  models.py  node.py  task.py
src/kohakuriver/docker/: client.py  container_manager.py  image_manager.py  sync_manager.py
(+261 files in other folders)
