[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kohakuriver"
version = "1.0.0.dev1"
description = "KohakuRiver - A lightweight clustering tool with Docker container as virtual env."
readme = "README.md"
requires-python = ">=3.10"
license-files = ["LICENSE"]
authors = [
    {name = "Shih-Ying Yeh(KohakuBlueLeaf)", email = "apolloyeh0123@gmail.com"},
]
dependencies = [
    "kohaku-engine",
    "kohakuvault",
    "peewee",
    "fastapi",
    "httpx",
    "psutil",
    "uvicorn[standard]",
    "snowflake-id",
    "docker",
    "websockets",
    "pydantic>=2.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
    "textual>=0.85.0",
    "pyte>=0.8.0",
    "pyroute2>=0.7.0",
    "bcrypt>=4.0.0",
    "asyncssh>=2.14.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
gpu = [
    "nvidia-ml-py"
]

[project.urls]
Homepage = "https://github.com/KohakuBlueleaf/HakuRiver"
Repository = "https://github.com/KohakuBlueleaf/HakuRiver"

[project.scripts]
# Main entry points
"kohakuriver" = "kohakuriver.cli.main:run"
"kohakuriver.host" = "kohakuriver.cli.host:main"
"kohakuriver.runner" = "kohakuriver.cli.runner:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kohakuriver = ["*.toml"]